@@ -8,7 +8,7 @@ URI::Fast - A fast(er) URI parser
 
 =head1 VERSION
 
-version 0.14
+version 0.15
 
 =head1 SYNOPSIS
 
