@@ -1,4 +1,5 @@
 {{$NEXT}}
+-bugfix: split_path generates incorrect segments on //paths
 
 0.14 2018-03-16
 -bugfix: dynamically find path to uri_fast.c
